<resources>
    <string name="app_name">WeatherHut</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="location">Location</string>
    <string name="clear_sky">Clear Sky</string>
    <string name="temp_c">Temp°C</string>
    <string name="min_temp_c">Min Temp: °C</string>
    <string name="max_temp_c">Max Temp: °C</string>
    <string name="aqi">AQI :</string>
    <string name="pm2_5">PM2.5:</string>
    <string name="pm10">PM10:</string>
    <string name="so2">SO2:</string>
    <string name="no2">NO2:</string>
    <string name="o3">O3:</string>
    <string name="co">CO:</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="created_by">Created By</string>
    <string name="code_beetles">CODE Beetles</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="todo">TODO</string>
    <string name="empt" />
    <string name="click_search_again">Click Search again</string>

</resources>
