<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:background="@drawable/gradient_bg">

    <RelativeLayout android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/addressContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/cityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:textColor="#FFFFFF"
                    android:gravity="center_horizontal"
                    android:hint="@string/enter_city_name"
                    android:textSize="24sp"
                    android:inputType="text" />
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />
                <ImageButton
                    android:id="@+id/searchButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/search_button"
                    android:padding="16dp"
                    android:onClick="onClicked"
                    android:contentDescription="@string/todo" />


            </LinearLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/overviewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_above="@+id/aqiContainer"
            android:gravity="center_horizontal"

            android:layout_marginBottom="80dp"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="30dp"
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"

                android:textSize="24sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/clear_sky"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-thin"
                android:text="@string/temp_c"
                android:textSize="90sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp_c" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp_c" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/aqiContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/detailsContainer"
            android:layout_marginBottom="45dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/aqiVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/aqi"
                android:textSize="45sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/pm2.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/pm2_5"/>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/pm10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/pm10"/>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/so2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/so2"/>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/no2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/no2"/>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/o3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/o3"/>
                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/co"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/co"/>

            </LinearLayout>

        </LinearLayout>



        <LinearLayout android:id="@+id/detailsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true">
            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunrisedwn"
                        android:contentDescription="@string/todo" />
                    <Space android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/sunrise"/>
                    <TextView android:id="@+id/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text=""/>
                </LinearLayout>
                <Space android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/sunsetdwn"
                        android:contentDescription="@string/todo" />
                    <Space android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/sunset"/>

                    <TextView
                        android:id="@+id/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="14sp" />
                </LinearLayout>
                <Space android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center" android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/winddwn"
                        android:contentDescription="@string/todo" />
                    <Space android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/wind"/>
                    <TextView android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text=""/>
                </LinearLayout>
            </LinearLayout>

            <Space android:layout_width="wrap_content"
                android:layout_height="10dp"/>

            <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/barometerdwn"
                        android:contentDescription="@string/todo" />
                    <Space android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/pressure"/>
                    <TextView android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text=""/>
                </LinearLayout>
                <Space android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/humiditydwn"
                        android:contentDescription="@string/todo" />
                    <Space android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/humidity"/>
                    <TextView android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text=""/>
                </LinearLayout>
                <Space android:layout_width="10dp"
                    android:layout_height="wrap_content"/>
                <LinearLayout android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="8dp"
                    android:background="#3CF1EBF1">
                    <ImageView android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/beetledwn"
                        android:contentDescription="@string/todo" />
                    <Space android:layout_width="wrap_content"
                        android:layout_height="5dp"/>
                    <TextView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/created_by"/>
                    <TextView android:id="@+id/about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/code_beetles"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>


    <ProgressBar android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"

        android:text="@string/click_search_again"/>


</RelativeLayout>